testsuite/bsc.interra/preprocessorTestcases/include/include_Test3.bsv.bsc-out.expected
checking package dependencies
Error: "include_Test3.bsv", line 4, column 1: (S0034)
  Cannot find the file `include_file.bsv' to be included
